# chandassu

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  nginx.conf  pyproject.toml  uwsgi.ini
.github/: .secrets
.github/workflows/: app_workflow.yml  unittests.yml
blueprints/: __init__.py  gana.py  kandapadya.py  practice.py  prasa.py  test.py  vrutta.py  yati.py
blueprints/chandassu/: __init__.py  ragale.py  shatpadi.py  vrutta.py
console/: README.txt  app.py  main.py  poem.py  prastara.py
console/chandassu/: __init__.py  chandassu.py  invalid.py  kandapadya.py  ragale.py  shatpadi.py  vrutta.py
console/chandassu_poems/: kandapadya.txt
console/chandassu_poems/ragale/: lalita.txt  mandanila.txt  utsaha.txt
console/chandassu_poems/shatpadi/: bhamini.txt  (+5 more)
console/features/: chandassu_identifier.py  poem.py  prastara.py
console/output/: chandassu_name.txt  poem_chandassu.txt
console/tests/: test_chandassu_type.py
console/utils/: constant.py
templates/: about.html  base.html  home.html  prasa.html  yati.html
templates/chandassu/: chandassu.html  kandapadya.html
templates/gana/: akshara_gana.html  amsha_gana.html  gana.html  matra_gana.html
templates/includes/: footer.html  header.html  home.html
templates/kandapadya/: kandapadya.html
templates/practice/: practice.html  practice_result.html
templates/test/: result.html  test.html  test_result.html
templates/vrutta/: champaka_mala.html  maha_sragdhara.html  mattebha_vikreedita.html  shardula_vikreedita.html  sragdhara.html  utpala_mala.html  vrutta.html
(+33 files in other folders)
